crates/solidity/testing/snapshots/bindings_output/events/selector/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[input.sol:4:5]
   │
 4 │ ╭─▶     function test() internal pure {
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Utils" @ input.sol:1:9] (library)
- Def: #2 ["Foo" @ input.sol:2:11] (event)
- Def: #3 ["x" @ input.sol:2:20] (parameter, type: uint256)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ library Utils {
   │         ──┬──  
   │           ╰──── name: 1
 2 │     event Foo(uint x);
   │           ─┬─      ┬  
   │            ╰────────── name: 2
   │                    │  
   │                    ╰── name: 3
───╯
